[package]
name = "threebodyart"
version = "0.1.0"
edition = "2021"

author = ["Kallefinn"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[lib]
#crate-type = ["cdylib"]


[dependencies]
nannou = "0.19"
nannou_egui = "0.19"
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
